@@ -251,8 +251,7 @@ class Request:
         if attr[:12] == '_Request__r_':
             name = attr[12:]
             if hasattr(Request, 'get_' + name):
-                getattr(self, 'get_' + name)()
-                return getattr(self, attr)
+                return getattr(self, 'get_' + name)()
         raise AttributeError, attr
 
     def get_method(self):
